Moved css classes to separate file

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 .titleScreen {
-
+background-image: url('../img/introtitle.png');
+background-repeat: no-repeat;
+background-position: center;
 }
 
 .stageone {
